# RustNet_library

./: Cargo.toml  README.md  guide.txt  rf_data_gen.py  run.py  run2.py
src/: activations.rs  data.rs  layers.rs  lib.rs  loss.rs  main.rs  serde_arrays.rs  train.rs
